// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Connect(SideMenu)
  menuItems={
    Array [
      Object {
        "action": [Function],
        "label": "About",
      },
      Object {
        "action": [Function],
        "label": "Help",
      },
      Object {
        "action": [Function],
        "label": "Write a Review",
      },
      Object {
        "action": [Function],
        "label": "Privacy Policy",
      },
      Object {
        "action": [Function],
        "label": "Terms of Service",
      },
      Object {
        "action": [Function],
        "label": "Sign out",
      },
    ]
  }
/>
`;

exports[`renders correctly 2`] = `
<Connect(SideMenu)
  menuItems={
    Array [
      Object {
        "action": [Function],
        "label": "About",
      },
      Object {
        "action": [Function],
        "label": "Help",
      },
      Object {
        "action": [Function],
        "label": "Write a Review",
      },
      Object {
        "action": [Function],
        "label": "Privacy Policy",
      },
      Object {
        "action": [Function],
        "label": "Terms of Service",
      },
    ]
  }
/>
`;
